--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Tue, 22 Dec 2020 10:02:55 GMT
+// Generated on Tue, 22 Dec 2020 10:21:52 GMT
 
 $color-primary-lighter: #57A4D7;
 $color-primary-default: #338FCC;
@@ -329,3 +329,5 @@ $datepicker-calendar-size-divider-width: 1px;
 $datepicker-calendar-size-icon-border-width: 2px;
 $datepicker-calendar-size-icon-prev-icon-transform: translateX(2px) rotate(-45deg);
 $datepicker-calendar-size-icon-nex-icon-transform: translateX(-2px) rotate(45deg);
+$divider-size-width: 1px;
+$divider-size-inset-margin: 80px;
