--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Tue, 22 Dec 2020 10:21:52 GMT
+// Generated on Tue, 22 Dec 2020 10:34:19 GMT
 
 $color-primary-lighter: #57A4D7;
 $color-primary-default: #338FCC;
@@ -331,3 +331,8 @@ $datepicker-calendar-size-icon-prev-icon-transform: translateX(2px) rotate(-45de
 $datepicker-calendar-size-icon-nex-icon-transform: translateX(-2px) rotate(45deg);
 $divider-size-width: 1px;
 $divider-size-inset-margin: 80px;
+$dropdown-item-size-padding: 5px 15px;
+$dropdown-trigger-size-padding-left: 16px;
+$dropdown-panel-size-padding: 4px 0;
+$dropdown-panel-size-border-width: 1px;
+$dropdown-panel-size-border-radius: 3px;
