--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Tue, 22 Dec 2020 10:34:19 GMT
+// Generated on Tue, 22 Dec 2020 11:41:01 GMT
 
 $color-primary-lighter: #57A4D7;
 $color-primary-default: #338FCC;
@@ -336,3 +336,7 @@ $dropdown-trigger-size-padding-left: 16px;
 $dropdown-panel-size-padding: 4px 0;
 $dropdown-panel-size-border-width: 1px;
 $dropdown-panel-size-border-radius: 3px;
+$form-field-size-border-width: 1px;
+$form-field-size-border-radius: 3px;
+$form-field-size-button-width: 32px;
+$form-field-hint-size-margin-top: 4px;
