--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Tue, 22 Dec 2020 11:41:01 GMT
+// Generated on Tue, 22 Dec 2020 12:46:26 GMT
 
 $color-primary-lighter: #57A4D7;
 $color-primary-default: #338FCC;
@@ -340,3 +340,6 @@ $form-field-size-border-width: 1px;
 $form-field-size-border-radius: 3px;
 $form-field-size-button-width: 32px;
 $form-field-hint-size-margin-top: 4px;
+$input-size-padding: 5px 16px;
+$input-size-width: 100%;
+$input-size-min-height: 30px;
