--- a/packages/mosaic/link/_link-theme.scss
+++ b/packages/mosaic/link/_link-theme.scss
@@ -4,16 +4,12 @@
 
 
 @mixin mc-link-theme($theme) {
-    $primary: map-get($theme, primary);
-    $foreground: map-get($theme, foreground);
-
     $is-dark: map-get($theme, is-dark);
 
-    $color: mc-color($primary);
-    $color_hover: mc-color($primary, if($is-dark, lighter, darker));
+    $color_hover: if($is-dark, $color-primary-lighter, $color-primary-darker);
 
     .mc-link {
-        color: $color;
+        color: $color-primary-default;
 
         text-decoration: none;
 
@@ -24,7 +20,7 @@
         }
 
         &:visited {
-            color: $color;
+            color: $color-primary-default;
         }
 
         &:hover {
@@ -32,9 +28,7 @@
         }
 
         &.cdk-keyboard-focused {
-            $focused-color: map-get(map-get($theme, states), focused-color);
-
-            outline: $focused-color solid 2px;
+            outline: $globals-states-focused-color solid 2px;
             outline-offset: 2px;
         }
 
@@ -53,10 +47,10 @@
         &.mc-link_dashed .mc-link__text {
             border-bottom-style: dashed;
             border-bottom-width: 1px;
-            border-bottom-color: rgba($color, 0.5);
+            border-bottom-color: rgba($color-primary-default, 0.5);
 
             &:visited {
-                border-bottom-color: rgba($color, 0.5);
+                border-bottom-color: rgba($color-primary-default, 0.5);
             }
 
             &:hover {
@@ -68,10 +62,10 @@
         &.mc-link_underlined .mc-link__text {
             border-bottom-style: solid;
             border-bottom-width: 1px;
-            border-bottom-color: rgba($color, 0.32);
+            border-bottom-color: rgba($color-primary-default, 0.32);
 
             &:visited {
-                border-bottom-color: rgba($color, 0.32);
+                border-bottom-color: rgba($color-primary-default, 0.32);
             }
 
             &:hover {
@@ -81,19 +75,17 @@
         /* stylelint-enable no-descending-specificity */
 
         &[disabled] {
-            $color_disabled: mc-color($foreground, text-disabled);
-
-            color: $color_disabled;
+            color: $color-foreground-text-disabled;
 
             cursor: default;
             pointer-events: none;
 
             &.mc-link_underlined .mc-link__text {
-                border-bottom-color: rgba($color_disabled, 0.64);
+                border-bottom-color: rgba($color-foreground-text-disabled, 0.64);
             }
 
             &.mc-link_dashed .mc-link__text {
-                border-bottom-color: $color_disabled;
+                border-bottom-color: $color-foreground-text-disabled;
             }
         }
     }
